fixed card align

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -64,7 +64,6 @@ body {
 }
 @media only screen and (max-width: 480px) {
   .card {
-    right: 1em;
     position: relative;
     margin: 0 auto;
     justify-self: center;
@@ -87,4 +86,4 @@ body {
   }
 }
 
-/* Override specific styles for screens up to 456px *//*# sourceMappingURL=styles.css.map */
+/* Override specific styles for screens up to 456px */ /*# sourceMappingURL=styles.css.map */
